tests/specs/class_implements2.txt
# mod.ts
export class Class implements Iterator, Iterable {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class implements Iterator, Iterable {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

class Class implements Iterator, Iterable



# output.json
{
  "symbols": [
    {
      "name": "Class",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "class",
          "def": {
            "isAbstract": false,
            "constructors": [],
            "properties": [],
            "indexSignatures": [],
            "methods": [],
            "extends": null,
            "implements": [
              {
                "repr": "Iterator",
                "kind": "typeRef",
                "value": {
                  "typeParams": null,
                  "typeName": "Iterator"
                }
              },
              {
                "repr": "Iterable",
                "kind": "typeRef",
                "value": {
                  "typeParams": null,
                  "typeName": "Iterable"
                }
              }
            ],
            "typeParams": [],
            "superTypeParams": []
          }
        }
      ]
    }
  ]
}
